# MixLaboratory

./: README.md
AudioAnalyzerBridge/: CMakeLists.txt
AudioAnalyzerBridge/include/: AudioAnalyzerBridge.h  BPM_Detector.h  FFT_Processor.h  LoadAudioFunction.h
AudioAnalyzerBridge/src/: AudioAnalyzerBridge.cpp  BPM_Detector.cpp  FFT_Processor.cpp  LoadAudioFunction.cpp
BuildNativeLibrary/: build_linux.sh  build_macos.sh  build_windows.bat
DjApp/: README.md  audio_analyzer_bridge.py  auto_updater.py  automix_dialog.py  automix_engine.py  cache_manager.py  debug_keys.py  debug_logger.py  deck_widgets.py  djapp.py  equalizer.py  file_management.py  fix_key_display.py  libAudioAnalyzerBridge.dylib  recording_worker.py  requirements.txt  settings.json  styles.qss  styles_classic_backup.qss  tempo_shifter.py  test_key_detection.py  turntable.py  tutorial.py  version_check.py  waveform.py
DjApp/cache/: cache_metadata.json  tutorial_config.json
DjApp/docs/: AUTO_SCREEN_FIT.md  COMPACT_LAYOUT.md  FINAL_SUMMARY.md  INSTALLATION.md  MODERN_UI_2025.md  NEW_FEATURES.md  OPTIMIZATIONS.md  PERFORMANCE_DEBUG_MODE.md  PERFORMANCE_IMPROVEMENTS.md  PRIVACY.md  PYTHON_VERSIONS.md  QUICK_TEST_KEYS.md  REALTIME_EQ_OPTIMIZATION.md  REALTIME_FEATURES_SUMMARY.md  REALTIME_OPTIMIZATION.md  TEMPO_QUALITY.md  TRACK_LIST_FEATURES.md  TRACK_LIST_KEY_FIX.md  ULTRA_COMPACT_NO_SCROLL.md  UPDATES_SUMMARY.md  UPDATE_SYSTEM.md  VINYL_SCRATCH_MODE.md
cache/: last_update_check.json
